# seppi-project/swagger.json
@@ -66,27 +66,51 @@
   },
   "ingred": {
     "required": [
-      "Ingredient",
-      "Amount",
-      "Expiration"
+      "ingredient",
+      "amount",
+      "expiration",
+      "category"
     ],
     "properties": {
-      "Ingredient": {
+      "ingredient": {
         "type": "string",
         "uniqueItems": false,
         "example": "Milk"
       },
-      "Amount": {
+      "amount": {
         "type": "string",
         "uniqueItems": false,
         "example": "3"
       },
-      "Expiration": {
+      "category": {
+        "type": "string",
+        "uniqueItems": false,
+        "example": "chicken"
+      },
+      "expiration": {
         "type": "string",
         "uniqueItems": false,
         "example": "7/15/2011"
       }
     }
+},
+"GroceryList": {
+  "required": [
+    "grocery",
+    "recipe"
+  ],
+  "properties": {
+    "ingredient": {
+      "type": "array",
+      "uniqueItems": false,
+      "example": ""
+    },
+    "recipe": {
+      "type": "string",
+      "uniqueItems": false,
+      "example": "Fillet Fish"
+    }
+  }
 },
 "ingred2": {
   "required": [
@@ -130,6 +154,67 @@
       "example": "Milk"
     }
   }
+},
+"addGroc": {
+  "required": [
+    "ingredient",
+    "note"
+  ],
+  "properties": {
+    "ingredient": {
+      "type": "string",
+      "uniqueItems": false,
+      "example": "Milk"
+    },
+    "note": {
+      "type": "string",
+      "uniqueItems": false,
+      "example": "EAT"
+    }
+  }
+},
+"updateGroc": {
+"required": [
+  "note",
+  "ingredient",
+  "checked",
+  "id"
+
+],
+"properties": {
+  "ingredient": {
+    "type": "string",
+    "uniqueItems": false,
+    "example": "Milk"
+  },
+  "note": {
+    "type": "string",
+    "uniqueItems": false,
+    "example": "Dont eat"
+  },
+  "id": {
+    "type": "string",
+    "uniqueItems": false,
+    "example": "id"
+  },
+  "check": {
+    "type": "string",
+    "uniqueItems": false,
+    "example": "1"
+  }
+}
+},
+"deleteGroc": {
+"required": [
+  "id"
+],
+"properties": {
+  "id": {
+    "type": "string",
+    "uniqueItems": false,
+    "example": "Milk"
+  }
+}
 },
     "Register": {
       "required": [
@@ -531,6 +616,161 @@
                  }
              }
          },
+         "/addGrocery": {
+           "post": {
+             "tags": [
+               "Users"
+             ],
+             "description": "Sets user Allergies",
+             "parameters": [
+               {
+                 "name": "user",
+                 "in": "body",
+                 "description": "When user is signed in call this to get info",
+                 "schema": {
+                     "$ref": "#/definitions/addGroc"
+                 }
+               }
+             ],
+             "produces": [
+               "application/json"
+             ],
+             "responses": {
+                 "200":
+                 {
+                     "description": "Went through"
+                 },
+                 "400":
+                 {
+                     "description": "Internal Server Error"
+                 }
+                 }
+             }
+         },
+         "/updateGrocery": {
+           "post": {
+             "tags": [
+               "Users"
+             ],
+             "description": "Sets user Allergies",
+             "parameters": [
+               {
+                 "name": "user",
+                 "in": "body",
+                 "description": "When user is signed in call this to get info",
+                 "schema": {
+                     "$ref": "#/definitions/updateGroc"
+                 }
+               }
+             ],
+             "produces": [
+               "application/json"
+             ],
+             "responses": {
+                 "200":
+                 {
+                     "description": "Went through"
+                 },
+                 "400":
+                 {
+                     "description": "Internal Server Error"
+                 }
+                 }
+             }
+         },
+         "/deleteGrocery": {
+           "post": {
+             "tags": [
+               "Users"
+             ],
+             "description": "Sets user Allergies",
+             "parameters": [
+               {
+                 "name": "user",
+                 "in": "body",
+                 "description": "When user is signed in call this to get info",
+                 "schema": {
+                     "$ref": "#/definitions/deleteGroc"
+                 }
+               }
+             ],
+             "produces": [
+               "application/json"
+             ],
+             "responses": {
+                 "200":
+                 {
+                     "description": "Went through"
+                 },
+                 "400":
+                 {
+                     "description": "Internal Server Error"
+                 }
+                 }
+             }
+         },
+         "/getGrocery": {
+          "post": {
+            "tags": [
+              "Users"
+            ],
+            "description": "Sets user Allergies",
+            "parameters": [
+              {
+                "name": "user",
+                "in": "body",
+                "description": "When user is signed in call this to get info",
+                "schema": {
+
+                }
+              }
+            ],
+            "produces": [
+              "application/json"
+            ],
+            "responses": {
+                "200":
+                {
+                    "description": "Went through"
+                },
+                "400":
+                {
+                    "description": "Internal Server Error"
+                }
+                }
+            }
+        },
+        "/addGroceryArray": {
+         "post": {
+           "tags": [
+             "Users"
+           ],
+           "description": "Sets user Allergies",
+           "parameters": [
+             {
+               "name": "user",
+               "in": "body",
+               "description": "When user is signed in call this to get info",
+               "schema": {
+                   "$ref": "#/definitions/GroceryList"
+               }
+             }
+           ],
+           "produces": [
+             "application/json"
+           ],
+           "responses": {
+               "200":
+               {
+                   "description": "Went through"
+               },
+               "400":
+               {
+                   "description": "Internal Server Error"
+               }
+               }
+           }
+       },
           "/getUser": {
   			"post": {
   			  "tags": [
